{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 38,
  "lineage": "89d82ec1-872d-0d44-e79e-cc9f1cbd42dd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2487bf27ac2d0ca",
            "arn": "arn:aws:ec2:ap-south-1:597727831065:elastic-ip/eipalloc-0f2487bf27ac2d0ca",
            "association_id": "eipassoc-08ac578dc73715254",
            "domain": "vpc",
            "id": "eipalloc-0f2487bf27ac2d0ca",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02bf262e615820aee",
            "private_dns": "ip-10-0-1-137.ap-south-1.compute.internal",
            "private_ip": "10.0.1.137",
            "public_dns": "ec2-13-204-13-145.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.13.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:597727831065:internet-gateway/igw-044507d2c6d89a021",
            "id": "igw-044507d2c6d89a021",
            "owner_id": "597727831065",
            "tags": {
              "Name": "EKS-IGW"
            },
            "tags_all": {
              "Name": "EKS-IGW"
            },
            "vpc_id": "vpc-06e99ad6a4eb87860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2487bf27ac2d0ca",
            "association_id": "eipassoc-08ac578dc73715254",
            "connectivity_type": "public",
            "id": "nat-029e71362a6c3f68b",
            "network_interface_id": "eni-02bf262e615820aee",
            "private_ip": "10.0.1.137",
            "public_ip": "13.204.13.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a83cfd2e71a85ed4",
            "tags": {
              "Name": "EKS-NAT-GW"
            },
            "tags_all": {
              "Name": "EKS-NAT-GW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:597727831065:route-table/rtb-05a10374e21b5f039",
            "id": "rtb-05a10374e21b5f039",
            "owner_id": "597727831065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-029e71362a6c3f68b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EKS-Private-RT"
            },
            "tags_all": {
              "Name": "EKS-Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e99ad6a4eb87860"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:597727831065:route-table/rtb-02b3c5b2ce9001667",
            "id": "rtb-02b3c5b2ce9001667",
            "owner_id": "597727831065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044507d2c6d89a021",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EKS-Public-RT"
            },
            "tags_all": {
              "Name": "EKS-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e99ad6a4eb87860"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039a25bf2163a0fe8",
            "route_table_id": "rtb-05a10374e21b5f039",
            "subnet_id": "subnet-06f378ea1232a9d11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0195fab9a7d06ae4c",
            "route_table_id": "rtb-05a10374e21b5f039",
            "subnet_id": "subnet-0157b921554600cdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f2beef7ff5513d8",
            "route_table_id": "rtb-02b3c5b2ce9001667",
            "subnet_id": "subnet-0a83cfd2e71a85ed4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccde636a929a669a",
            "route_table_id": "rtb-02b3c5b2ce9001667",
            "subnet_id": "subnet-0628f0d579526eba3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpc_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow all traffic from within the VPC to the EKS nodes",
            "from_port": 0,
            "id": "sgrule-847616085",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0786e179aace5aa24",
            "security_group_rule_id": "sgr-0625610b26d27794a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.main",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_subnet.private_a",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:597727831065:subnet/subnet-06f378ea1232a9d11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f378ea1232a9d11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597727831065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Private-Subnet-A"
            },
            "tags_all": {
              "Name": "EKS-Private-Subnet-A"
            },
            "vpc_id": "vpc-06e99ad6a4eb87860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:597727831065:subnet/subnet-0157b921554600cdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0157b921554600cdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597727831065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Private-Subnet-B"
            },
            "tags_all": {
              "Name": "EKS-Private-Subnet-B"
            },
            "vpc_id": "vpc-06e99ad6a4eb87860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:597727831065:subnet/subnet-0a83cfd2e71a85ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a83cfd2e71a85ed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597727831065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Public-Subnet-A",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "EKS-Public-Subnet-A",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06e99ad6a4eb87860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:597727831065:subnet/subnet-0628f0d579526eba3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0628f0d579526eba3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597727831065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-Public-Subnet-B",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "EKS-Public-Subnet-B",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06e99ad6a4eb87860"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:597727831065:vpc/vpc-06e99ad6a4eb87860",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08acb9865d769579d",
            "default_route_table_id": "rtb-0bb1a1e6d25a1ef49",
            "default_security_group_id": "sg-0f97c5cc6f0e5905e",
            "dhcp_options_id": "dopt-033a4310a21ba0393",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e99ad6a4eb87860",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb1a1e6d25a1ef49",
            "owner_id": "597727831065",
            "tags": {
              "Name": "EKS-VPC"
            },
            "tags_all": {
              "Name": "EKS-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}